06. May  2013 - amo -  FXAction, changes due to changes in Action interface
06. May  2013 - amo -  FXComponentCoordinator: fixed bug with local/global messages
02. May  2013 - amo -  FXWorkbenchHandler: fixed bug with empty perspectives
23. Apr. 2013 - amo -  FXUtil: findRootByObserveableId,getObserveableById  remove unused synchronisation
23. Apr. 2013 - amo -  FXComponentCoordinator: removed unused synchronisation in   handleMessage
23. Apr. 2013 - amo -  AStatelessCallbackComponent: remove unused init synchronisation
21. Apr. 2013 - amo -  TearDownWorker: check if component is still active before execute @OnTearDown.
12. Feb. 2013 - amo -  JACPManagedDialog: add cache for singleton dialogs
09. Feb  2013 - pete - JACPOptionPane: auto-hide not mandatory - available as option -> avoid disappearing dialogs, if they are chained
06. Feb. 2013 - amo -  FXComponentReplaceWorker: execute this.executeComponentViewPostHandle before parentComponentCheck
04. Feb. 2013 - pete - LayoutUtil: added some more util-functionalities to CSS- and LayoutUtil
24. Jan. 2013 - amo -  JACPManagedDialog: add managed dialog class to create managed, fxml/javafx components and have access to di container
24. Jan. 2013 - amo -  FXComponentCoordinator: removed component list and replaced calls with calls to registry
24. Jan. 2013 - amo -  Add ComponentRegestry to have a central repo to ret references to components
09. Jan. 2013 - amo -  ShutdownThreadsHandler: add APPLICATION_RUNNING flag
09. Jan. 2013 - amo -  ASubComponent: mutex removed
09. Jan. 2013 - amo -  FXComponentReplaceWorker: removed "synchronized" on component, removed global locking, use invokeOnFXThreadAndWait instead
09. Jan. 2013 - amo -  FXComponentInitWorker: replaced all Platform.runLater call by invokeOnFXThreadAndWait, removed global lock, release calls
09. Jan. 2013 - amo -  AFXComponentWorker: removed global lockQueue and add invokeOnFXThreadAndWait method, removed lock and release methods