@@ -13,7 +13,7 @@
 09. Apr. 2012 - amo - add perspective annotation
 08. Apr. 2012 - amo - removed some setter from IComponent  
 08. Apr. 2012 - amo - IComponentView and IPerspectiveView extracted
-08. Apr. 2012 - amo - Component and CallBackComponent annotiation added
+08. Apr. 2012 - amo - Component and CallBackComponent annotation added
 06. Apr. 2012 - amo - renamed IVComponent to IVisibleComponent
 06. Apr. 2012 - amo - renamed iLayoutAble to IVisibleComponent
 06. Apr. 2012 - amo - removed iMapReduceComponente... out of scope currently 
